[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://music/Blind Shift.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 743.0

[node name="Label" type="Label" parent="PanelContainer/Panel"]
margin_left = 1.0
margin_top = 25.0
margin_right = 1266.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="CheckButton" parent="PanelContainer/Panel"]
margin_left = 313.0
margin_top = 185.0
margin_right = 569.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXButton" type="CheckButton" parent="PanelContainer/Panel"]
margin_left = 313.0
margin_top = 249.0
margin_right = 569.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="PanelContainer/Panel"]
margin_left = 593.0
margin_top = 185.0
margin_right = 842.0
margin_bottom = 225.0
value = 100.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="PanelContainer/Panel"]
margin_left = 593.0
margin_top = 249.0
margin_right = 842.0
margin_bottom = 289.0
value = 100.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 569.0
margin_top = 633.0
margin_right = 701.0
margin_bottom = 679.0
custom_fonts/font = SubResource( 3 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="PanelContainer/Panel/MusicButton" to="." method="on_music_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/SFXButton" to="." method="on_SFX_button_pressed"]
[connection signal="value_changed" from="PanelContainer/Panel/MusicSlider" to="." method="on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/Panel/SFXSlider" to="." method="on_SFX_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/Panel/ApplyButton" to="." method="on_apply_pressed"]
